2020-12-09  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_struct_type_field): Subpass on the
	field type in normal context, avoiding generating a name.
	(pkl_gen_pr_type_array): Likewise.
	(pkl_gen_pr_type_struct): Likewise.
	(pkl_gen_pr_type): Remove hack.

2020-12-09  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_type_offset): Handle in_mapper and
	in_constructor and in_type.
	(pkl_gen_ps_type_offset): Remove.
	(pkl_phase_gen): Deregister pkl_gen_ps_type_offset.

2020-12-09  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.h (struct pkl_gen_payload): Remove field
	generating_pvm_struct_type.
	(PKL_GEN_CTX_GENERATING_PVM_STRUCT_TYPE): Remove.
	* libpoke/pkl-gen.c (pkl_gen_pr_decl): Use the `in_type' context
	to break the pass.
	(pkl_gen_pr_type_struct): Do not handle generating_pvm_struct_type.
	(pkl_gen_ps_type_struct): Likewise.

2020-12-09  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (PKL_GEN_DUP_CONTEXT): Renamed from
	PKL_GEN_SAVE_CONTEXT.
	(PKL_GEN_POP_CONTEXT): Renamed from PKL_GEN_RESTORE_CONTEXT.
	* libpoke/pkl-gen.pks: Adapt to renames.

2020-12-09  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.h (PKL_GEN_CTX_IN_TYPE): Define.
	* libpoke/pkl-gen.c (pkl_gen_ps_type_offset): Build offset type
	only in `in_type' context.
	(pkl_gen_ps_type_void): Likewise.
	(pkl_gen_ps_type_any): Likewise.
	(pkl_gen_ps_type_integral): Likewise.
	(pkl_gen_ps_type_function): Likewise.
	(pkl_gen_pr_type_array): Likewise.
	(pkl_gen_ps_type_string): Likewise.
	(pkl_gen_pr_type_struct): Likewise.
	(pkl_gen_ps_type_struct): Likewise.
	(pkl_gen_pr_struct_type_field): Likewise.
	(PKL_GEN_PUSH_CONTEXT): Define.
	* libpoke/pkl-gen.pks (array_mapper): Set the `in_type' context
	wherever appropriate.
	(array_constructor): Likewise.
	(struct_mapper): Likewise.
	(struct_constructor): Likewise.
	* libpoke/pkl-gen.c (pkl_gen_pr_array): Likewise.
	(pkl_gen_ps_struct): Likewise.
	(pkl_gen_ps_cast): Likewise.